--- a/Rewrite/vip_rewrite.conf
+++ b/Rewrite/vip_rewrite.conf
@@ -2,6 +2,8 @@ hostname = app.bilibili.com, api.bilibili.com, commerce-.*api.faceu.mobi, commer
 
 # 哔哩哔哩番剧开启1080P+
 ^https:\/\/ap(p|i)\.bilibili\.com\/((pgc\/player\/api\/playurl)|(x\/v2\/account\/myinfo\?)|(x\/v2\/account/mine\?)) url script-response-body nzw9314/NobyDa/QuantumultX/File/bilifj.js
+^https:\/\/api.bilibili.com\/pgc\/player\/api\/playurl url script-response-body nzw9314/Sunert/Script/Bilibili/bilibili.unblock.playurl.min.js
+^https:\/\/api.bilibili.com\/pgc\/view\/app\/season url script-response-body nzw9314/Sunert/Script/Bilibili/bilibili.unblock.season.min.js
 
 #轻颜相机 Ulike 蒸汽波相机(vaporcam) 三合一解锁VIP
 https://(commerce-.*api|pay).(faceu|wecut).(com|mobi)/(commerce|apple)/(iosAppVerifyReceipt.php|v1/subscription/user_info) url script-response-body nzw9314/Script/qyxj.js
