--- a/Rewrite/Get_Cookie_New.conf
+++ b/Rewrite/Get_Cookie_New.conf
@@ -407,3 +407,6 @@ https?:\/\/api\.umer\.com\.cn\/.*getCurrentUmerSign url script-request-header nz
 
 # 太好购 (By id77)
 ^https:\/\/cxdng\.cpic\.com\.cn\/taieshop\/api\/CustomerFansInfo\/GetFansInfo url script-request-header nzw9314/Task/thg.cookie.js
+
+# 银联
+https://youhui.95516.com/newsign/public/app/index.html url script-request-header https://raw.githubusercontent.com/jminging/profile/master/Script/unipay.js
