--- a/Rewrite/Get_Cookie.conf
+++ b/Rewrite/Get_Cookie.conf
@@ -61,5 +61,5 @@ https:\/\/m.client\.10010\.com\/mobileService\/home\/queryUserInfoSeven\.htm? ur
 
 
 #passerby-b
-#云闪付
-https://youhui.95516.com/newsign/public/app/index.html url script-request-header https://gitee.com/passerby-b/javascript/raw/master/unipay.js
+# 银联
+https://youhui.95516.com/newsign/api/coin_details url script-request-header https://raw.githubusercontent.com/jminging/profile/master/Task/unipay.js
