--- a/Rewrite/Get_Cookie.conf
+++ b/Rewrite/Get_Cookie.conf
@@ -62,4 +62,4 @@ https:\/\/m.client\.10010\.com\/mobileService\/home\/queryUserInfoSeven\.htm? ur
 
 #passerby-b
 # 银联
-https://youhui.95516.com/newsign/api/coin_details url script-request-header https://raw.githubusercontent.com/jminging/profile/master/Task/unipay.js
+^https://youhui.95516.com/newsign/api/daily_sign_in url script-request-header https://raw.githubusercontent.com/jminging/profile/master/Task/unipay.js
