--- a/Rewrite/vip_rewrite.conf
+++ b/Rewrite/vip_rewrite.conf
@@ -1,4 +1,4 @@
-hostname = app.bilibili.com, api.bilibili.com, commerce-.*api.faceu.mobi, commerce-api.faceu.mobi, app.flashdown365.com, *.kuwo.cn, xiaoxiao(img|apps|appxs).com, pan.baidu.com, education.github.com
+hostname = (commerce-*api|pay).faceu.com, (commerce-*api|pay).faceu.mobi, (commerce-*api|pay).wecut.com, (commerce-*api|pay).wecut.mobi, *.xiaoxiaoapps.com, *.xiaoxiaoappxs.com, *.xiaoxiaoimg.com, api.bilibili.com, api.bjxkhc.com, api.m.jd.com, api.meiyan.com, api.termius.com, app.bilibili.com, app.flashdown365.com, education.github.com, greasyfork.org, license.pdfexpert.com, musicpay.kuwo.cn, pan.baidu.com, vip1.kuwo.cn, vsco.co, weixin110.qq.com, www.xmind.cn
 
 # 哔哩哔哩番剧开启1080P+
 ^https:\/\/ap(p|i)\.bilibili\.com\/((pgc\/player\/api\/playurl)|(x\/v2\/account\/myinfo\?)|(x\/v2\/account/mine\?)) url script-response-body nzw9314/NobyDa/QuantumultX/File/bilifj.js
@@ -57,9 +57,11 @@ https:\/\/www\.xmind\.cn\/\_res\/devices url script-response-body https://raw.gi
 https:\/\/greasyfork\.org\/scripts\/.*\.user\.js url script-response-body https://raw.githubusercontent.com/Peng-YM/QuanX/master/Rewrites/GreasyFork/greasy-fork.js
 
 
-#京东历史比价 (by yichahucha)
-^https?://api\.m\.jd\.com/client\.action\?functionId=(wareBusiness|serverConfig|basicConfig) url script-response-body https://raw.githubusercontent.com/yichahucha/surge/master/jd_price.js
+# 京东比价
+^https?://api\.m\.jd\.com/client\.action\?functionId=(wareBusiness|serverConfig|basicConfig) url script-response-body https://service.2ti.st/QuanX/Script/jd_tb_price/main.js
 
-#淘宝历史比价 (by yichahucha)
-^http://.+/amdc/mobileDispatch url script-request-body nzw9314/yichahucha/tb_price.js
-^https?://trade-acs\.m\.taobao\.com/gw/mtop\.taobao\.detail\.getdetail url script-response-body nzw9314/yichahucha/tb_price.js
+# 淘宝比价
+^http://.+/amdc/mobileDispatch url script-request-body https://service.2ti.st/QuanX/Script/jd_tb_price/main.js
+
+# 解除微信屏蔽（支持淘宝、天猫、支付宝等平台）(by HotKids)
+^https?:\/\/weixin110\.qq\.com\/cgi-bin\/mmspamsupport-bin\/newredirectconfirmcgi url script-response-body https://raw.githubusercontent.com/zqzess/rule_for_quantumultX/master/js/backup/weixin110.js
