--- a/Rewrite/ad_rewrite.conf
+++ b/Rewrite/ad_rewrite.conf
@@ -1,4 +1,4 @@
-hostname = *.googlevideo.com, s.youtube.com, www.youtube.com, youtubei.googleapis.com, vsco.co, api.weibo.cn, pay.sc.weibo.com, mp.weixin.qq.com, api.m.jd.com, trade-acs.m.taobao.com, m.client.10010.com, api.termius.com, ssp-x.yoloho.com, premiumyva.appspot.com, r.inews.qq.com, api.bilibili.com, api.live.bilibili.com, app.bilibili.com, api.zhihu.com, link.zhihu.com, api.weibo.com, mapi.weibo.cn, mapi.weibo.com, m.ads.8le8le.com
+hostname = homepage-api.smzdm.com, haojia-api.smzdm.com, article-api.smzdm.com, *.googlevideo.com, s.youtube.com, www.youtube.com, youtubei.googleapis.com, vsco.co, api.weibo.cn, pay.sc.weibo.com, mp.weixin.qq.com, api.m.jd.com, trade-acs.m.taobao.com, m.client.10010.com, api.termius.com, ssp-x.yoloho.com, premiumyva.appspot.com, r.inews.qq.com, api.bilibili.com, api.live.bilibili.com, app.bilibili.com, api.zhihu.com, link.zhihu.com, api.weibo.com, mapi.weibo.cn, mapi.weibo.com, m.ads.8le8le.com
 
 # YouTube去广告
 # 自行添加主机名
@@ -15,11 +15,11 @@ hostname = *.googlevideo.com, s.youtube.com, www.youtube.com, youtubei.googleapi
 
 
 # 去微博应用内广告 (By yichahucha)
-^https?://(sdk|wb)app\.uve\.weibo\.com(/interface/sdk/sdkad.php|/wbapplua/wbpullad.lua) url script-response-body nzw9314/yichahucha/wb_launch.js
-^https?://m?api\.weibo\.c(n|om)/2/(statuses/(unread|extend|positives/get|(friends|video)(/|_)(mix)?timeline)|stories/(video_stream|home_list)|(groups|fangle)/timeline|profile/statuses|comments/build_comments|photo/recommend_list|service/picfeed|searchall|cardlist|page|!/photos/pic_recommend_status|video/tiny_stream_video_list) url script-response-body nzw9314/yichahucha/wb_ad.js
+#^https?://(sdk|wb)app\.uve\.weibo\.com(/interface/sdk/sdkad.php|/wbapplua/wbpullad.lua) url script-response-body nzw9314/yichahucha/wb_launch.js
+#^https?://m?api\.weibo\.c(n|om)/2/(statuses/(unread|extend|positives/get|(friends|video)(/|_)(mix)?timeline)|stories/(video_stream|home_list)|(groups|fangle)/timeline|profile/statuses|comments/build_comments|photo/recommend_list|service/picfeed|searchall|cardlist|page|!/photos/pic_recommend_status|video/tiny_stream_video_list) url script-response-body nzw9314/yichahucha/wb_ad.js
 
 # 去微信公众号广告 (By Choler)
-^https?:\/\/mp\.weixin\.qq\.com\/mp\/getappmsgad url script-response-body nzw9314/NobyDa/QuantumultX/File/Wechat.js
+^https?:\/\/mp\.weixin\.qq\.com\/mp\/getappmsgad url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/QuantumultX/File/Wechat.js
 
 
 #联通营业厅 去轮播广告 (By Wangsc1)
@@ -55,3 +55,9 @@ https://api.live.bilibili.com/xlive/app-room/v1/index/getInfoByRoom?access_key u
 
 #网易云启动页
 ^(https|http)://m\.ads\.8le8le\.com/adShow url reject-200
+
+
+# 什么值得买去广告
+^https:\/\/homepage-api.smzdm.com\/home url script-response-body https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/script/smzdm/smzdm_remove_ads.js
+^https:\/\/haojia-api.smzdm.com\/home\/list url script-response-body https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/script/smzdm/smzdm_remove_ads.js
+^https:\/\/article-api.smzdm.com\/article\/index_home_page url script-response-body https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/script/smzdm/smzdm_remove_ads.js
