--- a/Rewrite/my_cookie.conf
+++ b/Rewrite/my_cookie.conf
@@ -2,5 +2,4 @@ hostname=lyh.lncmcc.com
 
 
 # wx_lyh
-https:\/\/lyh\.lncmcc\.com\/zt-portal\/lnlyh\/portal\/app\/api\/v1\/my1001\/* url script-request-header
-https:\/\/api\.m\.jd\.com\/client\.action.*functionId=signBean url script-request-header https://raw.githubusercontent.com/jminging/profile/master/Script/lyh_cookie.js
+^https:\/\/lyh\.lncmcc\.com\/zt-portal\/lnlyh\/portal\/app\/api\/v1\/my1001\/* url script-request-header https://raw.githubusercontent.com/jminging/profile/master/Script/lyh_cookie.js
