--- a/Rewrite/my_cookie.conf
+++ b/Rewrite/my_cookie.conf
@@ -3,3 +3,5 @@ hostname=lyh.lncmcc.com
 
 # wx_lyh
 ^https:\/\/lyh\.lncmcc\.com\/zt-portal\/lnlyh\/portal\/app\/api\/v1\/my1001\/* url script-request-header https://raw.githubusercontent.com/jminging/profile/master/Script/lyh_cookie.js
+# 阿里云盘
+^https:\/\/auth\.aliyundrive\.com\/v2\/account\/token url script-request-body https://raw.githubusercontent.com/jminging/profile/master/Script/aDrive_cookie.js
