--- a/Rewrite/my_cookie.conf
+++ b/Rewrite/my_cookie.conf
@@ -1,7 +1,9 @@
-hostname=lyh.lncmcc.com, auth.aliyundrive.com
+hostname=lyh.lncmcc.com, auth.aliyundrive.com, aas.caiyun.feixin.10086.cn
 
 
 # wx_lyh
 ^https:\/\/lyh\.lncmcc\.com\/zt-portal\/lnlyh\/portal\/app\/api\/v1\/my1001\/* url script-request-header https://raw.githubusercontent.com/jminging/profile/master/Script/lyh_cookie.js
 # 阿里云盘
 ^https:\/\/auth\.aliyundrive\.com\/v2\/account\/token url script-request-body https://raw.githubusercontent.com/jminging/profile/master/Script/aDrive_cookie.js
+# 移动云盘
+^https:\/\/aas\.caiyun\.feixin\.10086\.cn\/\/?tellin\/querySpecToken\.do url script-request-body https://raw.githubusercontent.com/jminging/profile/master/Script/caiyun_cookie.js
