--- a/Rewrite/my_cookie.conf
+++ b/Rewrite/my_cookie.conf
@@ -6,4 +6,4 @@ hostname=lyh.lncmcc.com, auth.aliyundrive.com, aas.caiyun.feixin.10086.cn
 # 阿里云盘
 ^https:\/\/auth\.aliyundrive\.com\/v2\/account\/token url script-request-body https://raw.githubusercontent.com/jminging/profile/master/Script/aDrive_cookie.js
 # 移动云盘
-^https:\/\/aas\.caiyun\.feixin\.10086\.cn\/\/?tellin\/querySpecToken\.do url script-request-body https://raw.githubusercontent.com/jminging/profile/master/Script/caiyun_cookie.js
+^https:\/\/aas\.caiyun\.feixin\.10086\.cn(:443)?\/\/?tellin\/querySpecToken\.do url script-request-body https://raw.githubusercontent.com/jminging/profile/master/Script/caiyun_cookie.js
