--- a/Rewrite/my_cookie.conf
+++ b/Rewrite/my_cookie.conf
@@ -7,3 +7,4 @@ hostname=lyh.lncmcc.com, auth.aliyundrive.com, aas.caiyun.feixin.10086.cn
 ^https:\/\/auth\.aliyundrive\.com\/v2\/account\/token url script-request-body https://raw.githubusercontent.com/jminging/profile/master/Script/aDrive_cookie.js
 # 移动云盘
 ^https:\/\/aas\.caiyun\.feixin\.10086\.cn(:443)?\/\/?tellin\/querySpecToken\.do url script-request-body https://raw.githubusercontent.com/jminging/profile/master/Script/caiyun_cookie.js
+^https:\/\/mnote\.caiyun\.feixin\.10086\.cn(:443)?\/noteServer\/api\/authTokenRefresh\.do url script-request-body https://raw.githubusercontent.com/jminging/profile/master/Script/caiyun_cookie.js
