--- a/Rewrite/my_cookie.conf
+++ b/Rewrite/my_cookie.conf
@@ -1,4 +1,4 @@
-hostname=lyh.lncmcc.com, auth.aliyundrive.com, aas.caiyun.feixin.10086.cn, mnote.caiyun.feixin.10086.cn
+hostname=lyh.lncmcc.com, auth.aliyundrive.com, aas.caiyun.feixin.10086.cn, mnote.caiyun.feixin.10086.cn, logininterface.mail.10086.cn
 
 
 # wx_lyh
@@ -8,3 +8,5 @@ hostname=lyh.lncmcc.com, auth.aliyundrive.com, aas.caiyun.feixin.10086.cn, mnote
 # 移动云盘
 ^https:\/\/aas\.caiyun\.feixin\.10086\.cn(:443)?\/\/?tellin\/querySpecToken\.do url script-request-body https://raw.githubusercontent.com/jminging/profile/master/Script/caiyun_cookie.js
 ^https:\/\/mnote\.caiyun\.feixin\.10086\.cn(:443)?\/noteServer\/api\/authTokenRefresh\.do url script-request-body https://raw.githubusercontent.com/jminging/profile/master/Script/caiyun_cookie.js
+# 139邮箱果园
+^https:\/\/logininterface\.mail\.10086\.cn\/s\?func\=login\:authLogin url script-request-body https://raw.githubusercontent.com/jminging/profile/master/Script/139_cookie.js
