--- a/Rewrite/my_cookie.conf
+++ b/Rewrite/my_cookie.conf
@@ -11,4 +11,4 @@ hostname=lyh.lncmcc.com, auth.aliyundrive.com, aas.caiyun.feixin.10086.cn, mnote
 # 139邮箱果园
 ^https:\/\/logininterface\.mail\.10086\.cn\/s\?func\=login\:authLogin url script-request-body https://raw.githubusercontent.com/jminging/profile/master/Script/139_cookie.js
 # 云游记
-^https:\/\/bocfz.sinodoc.cn\:8099\/api\/UniLogin\/bocCryptLogin url script-request-body https://raw.githubusercontent.com/jminging/profile/master/Script/boc_cookie.js
+^https:\/\/bocfz.sinodoc.cn\:8099\/api\/UniLogin\/bocCryptAllLogin url script-request-body https://raw.githubusercontent.com/jminging/profile/master/Script/boc_cookie.js
