--- a/Rewrite/my_cookie.conf
+++ b/Rewrite/my_cookie.conf
@@ -12,5 +12,5 @@ hostname=lyh.lncmcc.com, auth.aliyundrive.com, aas.caiyun.feixin.10086.cn, mnote
 ^https:\/\/logininterface\.mail\.10086\.cn\/s\?func\=login\:authLogin url script-request-body https://raw.githubusercontent.com/jminging/profile/master/Script/139_cookie.js
 # 云游记
 ^https:\/\/bocfz.sinodoc.cn\:8099\/api\/UniLogin\/bocCryptAllLogin url script-request-body https://raw.githubusercontent.com/jminging/profile/master/Script/boc_cookie.js
-# 云闪付
+# 云闪付 - 寻福之旅
 ^https:\/\/youhui\.95516\.com\/newsign\/xunfu\/api\/home\/init url script-request-body https://raw.githubusercontent.com/jminging/profile/master/Script/ysf_cookie.js
