--- a/Rewrite/my_cookie.conf
+++ b/Rewrite/my_cookie.conf
@@ -1,3 +1,6 @@
+# boxjs sub url
+# https://raw.githubusercontent.com/jminging/profile/master/Task/boxjs.json
+
 hostname=lyh.lncmcc.com, auth.aliyundrive.com, aas.caiyun.feixin.10086.cn, mnote.caiyun.feixin.10086.cn, logininterface.mail.10086.cn, bocfz.sinodoc.cn, youhui.95516.com
 
 
@@ -14,3 +17,4 @@ hostname=lyh.lncmcc.com, auth.aliyundrive.com, aas.caiyun.feixin.10086.cn, mnote
 ^https:\/\/bocfz.sinodoc.cn\:8099\/api\/UniLogin\/bocCryptAllLogin url script-request-body https://raw.githubusercontent.com/jminging/profile/master/Script/boc_cookie.js
 # 云闪付 - 寻福之旅
 ^https:\/\/youhui\.95516\.com\/newsign\/xunfu\/api\/home\/init url script-request-header https://raw.githubusercontent.com/jminging/profile/master/Script/ysf_cookie.js
+
