--- a/Rewrite/my_cookie.conf
+++ b/Rewrite/my_cookie.conf
@@ -1,7 +1,7 @@
 # boxjs sub url
 # https://raw.githubusercontent.com/jminging/profile/master/Task/boxjs.json
 
-hostname=lyh.lncmcc.com, auth.aliyundrive.com, aas.caiyun.feixin.10086.cn, mnote.caiyun.feixin.10086.cn, logininterface.mail.10086.cn, bocfz.sinodoc.cn, youhui.95516.com, i.meituan.com, promotion.waimai.meituan.com, h5.ele.me
+hostname=lyh.lncmcc.com, auth.aliyundrive.com, aas.caiyun.feixin.10086.cn, mnote.caiyun.feixin.10086.cn, logininterface.mail.10086.cn, bocfz.sinodoc.cn, youhui.95516.com, i.meituan.com, promotion.waimai.meituan.com, gaea.meituan.com, open.meituan.com, h5.ele.me
 
 
 # wx_lyh
@@ -19,8 +19,14 @@ hostname=lyh.lncmcc.com, auth.aliyundrive.com, aas.caiyun.feixin.10086.cn, mnote
 ^https:\/\/youhui\.95516\.com\/newsign\/xunfu\/api\/home\/init url script-request-header https://raw.githubusercontent.com/jminging/profile/master/Script/ysf_cookie.js
 
 # chavyleung scripts
-# 美团外卖
+#美团外卖
 ^https:\/\/promotion.waimai.meituan.com\/playcenter\/signIn\/entry url script-request-header https://raw.githubusercontent.com/chavyleung/scripts/master/wmmeituan/wmmeituan.cookie.js
+^https:\/\/promotion.waimai.meituan.com\/playcenter\/signIn\/doaction url script-request-body https://raw.githubusercontent.com/chavyleung/scripts/master/wmmeituan/wmmeituan.cookie.js
+^https://gaea.meituan.com/mapi/usercenter url script-request-header https://raw.githubusercontent.com/fmz200/wool_scripts/main/Scripts/cookie/get_cookie.js
+^https://open.meituan.com/user/v1/info/auditting url script-response-body https://raw.githubusercontent.com/fmz200/wool_scripts/main/Scripts/cookie/get_cookie.js
+
+
+
 # 饿了么
 ^https:\/\/h5\.ele\.me\/restapi\/eus\/v\d\/current_user$ url script-request-header https://raw.githubusercontent.com/songyangzz/QuantumultX/master/elem/elemGetCookies.js
 
